# ScaleBridge

./: .gitignore  Cargo.toml  LICENSE  README.md  eslint.config.mjs  index.html  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
crates/scalebridge-cli/: Cargo.toml
crates/scalebridge-cli/src/: hex_input.rs  main.rs  output.rs  persistence.rs
crates/scalebridge-core/: Cargo.toml
crates/scalebridge-core/src/: lib.rs  protocol.rs  watcher.rs
crates/scalebridge-storage/: Cargo.toml
crates/scalebridge-storage/src/: lib.rs  models.rs  storage.rs
docs/: protocol.md  spec.md
src/: main.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  services.rs  state.rs  tray.rs  window.rs
src/app/: app.ts  state.ts
src/components/: dashboard.ts  dom.ts
src/features/dashboard/: data.ts  subscriptions.ts
src/lib/: format.ts  tauri.ts  types.ts
src/stores/: preview-data.ts
src/styles/: app.css
