[package]
name = "scalebridge-tauri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[lib]
name = "scalebridge_tauri"
path = "src/lib.rs"

[[bin]]
name = "scalebridge-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
hex.workspace = true
scalebridge-core.workspace = true
scalebridge-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-autostart.workspace = true
tauri-plugin-log.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
