[package]
name = "scalebridge-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
rusqlite.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
